2007-12-01  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-article-browse-html-article): Mention
	`mm-text-html-renderer' in the doc string.

	* rfc2047.el (rfc2047-encode-max-chars): Refer to RFC 2047 in doc
	string.  Add comments.

	* message.el (message-idna-to-ascii-rhs-1): Don't call `idna-to-ascii'
	if rhs is ASCII.

2007-11-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* tls.el (tls-hostmismatch, open-tls-stream): Checkdoc cleanup.

2007-11-28  Elias Oltmanns  <eo@nebensachen.de>

	* tls.el (open-tls-stream): Actually consult tls-checktrust to see if
	certs should be verified and what is to be done in the event of a
	verification failure.

	* gnus.el (gnus-method-to-server): Add an optional parameter so the
	caller can indicate whether the cache should be disregarded for this
	call.  This way the result of the call is reproducible at all times and
	can be considered a canonical server name for the supplied method.
	(gnus-agent-method-p): Canonicalize server names by pushing their
	method through `gnus-method-to-server' using the no-cache argument.

	* gnus-srvr.el (gnus-server-insert-server-line): Call
	`gnus-method-to-server' with `no-cache' argument.

	* gnus-agent.el (gnus-agent-toggle-plugged): Don't call
	gnus-agent-possibly-synchronize-flags as this should be called when the
	server is actually being opened.
	(gnus-agent-possibly-synchronize-flags)
	(gnus-agent-possibly-synchronize-flags-server): Move check for the
	flags file of an agentized server to the latter function.

	* gnus-int.el (gnus-agent-possibly-synchronize-flags-server): Autoload.
	(gnus-open-server): Call gnus-agent-possibly-synchronize-flags-server
	after a connection has been established successfully.

2007-11-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-display-face): Force to display face if called
	interactively; check if gnus-article-x-face-too-ugly matches author.
	(article-display-x-face): Display face even if From header is missing